<resources>
    <string name="app_name" translatable="false">Current News App</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home" translatable="false">Home</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="favorite" translatable="false">Favorite</string>
    <string name="setting">Setting</string>
    <string name="news_image" translatable="false">News Image</string>
    <string name="search_text" translatable="false">You can search everything in the world.</string>
    <string name="search" translatable="false">Search</string>
    <string name="go_to_source" translatable="false">Source Code</string>
    <string name="example" translatable="false">Example</string>
    <string name="add_to_favorite_list">Add to Favorite</string>
    <string name="added_favorite">Added Favorite</string>
    <string name="your_saved_articles">Your Saved Articles</string>
    <string name="not_found">The content you were looking for could not be found</string>
    <string name="warning">!</string>
    <string name="development">Development</string>
    <string name="developer">Developer</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="share_friend">Share to Friends</string>
    <string name="top_trending">Breaking News</string>
    <string name="technology_news">Technology News</string>
    <string name="first_presentation">It is an award-winning service that brings together all kinds of news, popular articles and conversations that are read by millions of people every day, related to their interests or passions. With everything in one place, reading news, collecting and sharing news has never been easier and more beautiful.</string>
    <string name="second_presentation">For everything from travel to technology to design, there is something to explore and many interesting areas to explore. Here is an application where you can find everything you are looking for.</string>
    <string name="thirt_presentation">Get the trusted global news, trusted data, and expert insights you need to stay ahead. The CurrentNews app brings you the international business news, expert analytics and market data you need to stay ahead.</string>
    <string name="get_started">Get Started</string>
    <string name="news_search">SEARCH NEWS IN THE WORLD</string>
    <string name="news_find">FIND NEWS ANY WHERE THEY</string>
    <string name="news_connect">TAKE INFORMATION IN OTHER PEOPLE</string>
    <string name="deleted_article">Article deleted successfully</string>
    <string name="githup_adress">https://github.com/salihkinali/CurrentNewsApp</string>
    <string name="feedback_adress">https://docs.google.com/forms/d/1GOUNwV12H3QDjhM26GSZRQbhV-mOXvUTbOyVlPGWOB0/</string>
    <string name="developer_adress">https://twitter.com/S_kinali</string>
</resources>