<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ui.fragment.NewDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:textColor="@color/dark_gray"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry" />

            <ImageView
                android:id="@+id/newsImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/news_image"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/newContext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sourceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="#EF6C00"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/example" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sourcePlace"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/dark_gray"
                android:text="@string/go_to_source"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold"
                app:tint="@color/orange" />

            <TextView
                android:id="@+id/publishedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="Yayınlanma Tarihi: 22/10/2022" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>